--- a/templates/_partials/_sidebar.html.twig
+++ b/templates/_partials/_sidebar.html.twig
@@ -92,7 +92,25 @@
                         </li>
                     </ul>
                 </li>
+                    <li class="nav-item">
+                        <a href="{{path('app_gestion_contentieux_litige_index')}}" class="nav-link">
+                            <i class="nav-icon fas fa-th"></i>
+                            <p>
+                                Gestion des litiges
+                            </p>
+                        </a>
+                    </li>
                 {% endif %}
+
+                <li class="nav-item">
+                    <a href="{{path('app_gestion_obligation_obligation_index')}}" class="nav-link" target="_top">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p>
+                            Gestion des obligations
+                        </p>
+                    </a>
+                </li>
+
 
                 {#<li class="nav-item">
                     <a href="#" class="nav-link">
