--- a/templates/gestion_contentieux/litige/index.html.twig
+++ b/templates/gestion_contentieux/litige/index.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block page_title %}Base documentaire - Type de contrat{% endblock %}
-{% block title %}Base documentaire - Type de contrat{% endblock %}
+{% block page_title %}Accueil - Gestion Contentieux et litiges{% endblock %}
+{% block title %}Accueil - Gestion Contentieux et litiges{% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
@@ -24,10 +24,35 @@
     <script src="{{ asset('plugins/datatables-buttons/js/buttons.html5.min.js') }}" defer></script>
     <script src="{{ asset('plugins/datatables-buttons/js/buttons.print.min.js') }}" defer></script>
     <script src="{{ asset('plugins/datatables-buttons/js/buttons.colVis.min.js') }}" defer></script>
+    {{ encore_entry_script_tags('gestion_contractuelle_home') }}
 {% endblock %}
 
 {% block body %}
     {# Compte des statuts en base de données #}
+    <div class="row">
+        <div class="col">
+            <div class="small-box bg-success">
+                <div class="inner">
+                    <h3>{{ nbrDemandeEnCoursDeValidation }}</h3>
+
+                    <h4>Litiges en cours</h4>
+                </div>
+                <div class="icon">
+                    <i class="ion ion-bag"></i>
+                </div>
+            </div>
+        </div>
+        <div class="col-3">
+            <!-- small card -->
+            <a href="{{ path('app_gestion_contentieux_litige_new') }}" target="_top">
+                <div class="small-box bg-info">
+                    <div class="inner">
+                        Affaires contentieuses et litiges
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
     {# Tableau avec les informations #}
     <div class="row">
         <div class="col">
@@ -42,51 +67,54 @@
     <div class="row">
         <div class="col-12">
             <div class="card">
-                <div class="card-header">Enregistrer un nouveau type de contrat</div>
-                <div class="card-body">
-                    {{ form_start(form, {attr: {target:"_top"}}) }}
-                    {{ form_label(form.label) }}
-                    {{ form_widget(form.label) }}
-                    {{ form_label(form.fichier) }}
-                    {{ form_widget(form.fichier) }}
-                    {{ form_end(form) }}
+                <div class="card-header">
+                    <h3 class="card-title">Liste de tout l contentieux.</h3>
                 </div>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
+                <!-- /.card-header -->
                 <div class="card-body">
+                    <hr>
                     <table id="example1" class="table table-bordered table-hover">
                         <thead>
                         <tr>
-                            <th>#</th>
-                            <th>Nom</th>
-                            <th>Actions</th>
+                            <th>Identifiant</th>
+                            <th>Statut</th>
+                            <th>Nature</th>
+                            <th>Date du cas</th>
+                            <th>Nom des parties</th>
+                            <th>Juridiction</th>
+                            <th>Avocat</th>
                         </tr>
                         </thead>
                         <tbody>
-                        {% for modele in modeles %}
+                        {% for contrat in litiges %}
                             <tr>
-                                <td>{{ loop.index }}</td>
-                                <td>{{ modele.originalName }}</td>
+                                <td>{{ contrat.id }}</td>
+                                <td><button class="btn btn-info">En cours</button></td>
+                                <td>{{ contrat.nature }}</td>
+                                <td>{{ contrat.dateCas | date('d/M/Y') }}</td>
+                                <td>{{ contrat.partieDemandeur ~ ' ' ~ contrat.partieDefendeur }}</td>
+                                <td>{{ contrat.juridiction }}</td>
+                                <td>{{ contrat.avocat }}</td>
                                 <td>
-                                    <div class="btn-group">
-                                        <a href="{{ modele.path }}">
-                                            <button type="button" class="btn btn-default">Télécharger</button>
-                                        </a>
-                                        <a href="{{ path('app_gestion_base_documentaire_type_doc_contrat_delete', {id: modele.id}) }}">
-                                            <button type="button" class="btn btn-default">Supprimer</button>
-                                        </a>
-                                    </div>
+                                    <a href="{{ path('app_gestion_contentieux_litige_show', {'id': contrat.id}) }}" target="_top">
+                                        <button class="btn btn-info">Consulter</button>
+                                    </a>
+                                    <a href="{{ path('app_gestion_contentieux_litige_edit', {'id': contrat.id}) }}" target="_top">
+                                        <button class="btn btn-info">Modifier</button>
+                                    </a>
                                 </td>
                             </tr>
                         {% endfor %}
                         </tbody>
                         <tfoot>
                         <tr>
-                            <th>#</th>
-                            <th>Nom</th>
-                            <th>Actions</th>
+                            <th>Identifiant</th>
+                            <th>Statut</th>
+                            <th>Nature</th>
+                            <th>Date du cas</th>
+                            <th>Nom des parties</th>
+                            <th>Juridiction</th>
+                            <th>Avocat</th>
                         </tr>
                         </tfoot>
                     </table>
@@ -98,6 +126,4 @@
         </div>
         <!-- /.col -->
     </div>
-
-
 {% endblock %}
