Ajout Avis & Conseils

--- a/templates/_partials/_sidebar.html.twig
+++ b/templates/_partials/_sidebar.html.twig
@@ -110,6 +110,14 @@
                         </p>
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a href="{{path('app_gestion_avis_conseils_avis_index')}}" class="nav-link" target="_top">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p>
+                            Avis & Conseils
+                        </p>
+                    </a>
+                </li>
 
 
                 {#<li class="nav-item">
