--- a/templates/gestion_avis_conseils/avis/show.html.twig
+++ b/templates/gestion_avis_conseils/avis/show.html.twig
@@ -1,34 +1,137 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Avis{% endblock %}
+{% block page_title %}Consultation de la demande - {{ avis.id }}{% endblock %}
+{% block title %}
+    Consultation de la demande N°{{ avis.id }}
+{% endblock %}
+
+{% block meta_tags %}
+    <meta name="turbo-cache-control" content="no-cache">
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+    <meta name="turbo-visit-control" content="reload">
+    <link rel="stylesheet" href="{{ asset("plugins/datatables-bs4/css/dataTables.bootstrap4.min.css") }}">
+    <link rel="stylesheet" href="{{ asset('plugins/datatables-responsive/css/responsive.bootstrap4.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('plugins/datatables-buttons/css/buttons.bootstrap4.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('plugins/summernote/summernote-bs4.min.css') }}">
+    <link rel="stylesheet" href="{{ asset('plugins/icheck-bootstrap/icheck-bootstrap.min.css') }}">
+    <style>
+        .desactive{
+            background-color: #e9ecef;
+            pointer-events:none;
+        }
+    </style>
+{% endblock %}
 
 {% block body %}
-    <h1>Avis</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ avi.id }}</td>
-            </tr>
-            <tr>
-                <th>Objet</th>
-                <td>{{ avi.objet }}</td>
-            </tr>
-            <tr>
-                <th>Rensignement</th>
-                <td>{{ avi.rensignement }}</td>
-            </tr>
-            <tr>
-                <th>NiveauExecution</th>
-                <td>{{ avi.niveauExecution }}</td>
-            </tr>
-        </tbody>
-    </table>
+    {{ form_start(form) }}
+    <div class="row">
+        <div class="col">
+            <div class="card card-primary">
+                <div class="card-header">
+                    <div class="card-title">
+                        {% if is_granted('ROLE_JURIDIQUE') %}
+                            {% if avis.currentState == "waiting_for_attribution" %}
+                                Traiter la demande
+                            {% else %}
+                                "Consulter la demande"
+                            {% endif %}
 
-    <a href="{{ path('app_gestion_avis_conseils_avis_index') }}">back to list</a>
+                        {% else %}
+                            Consulter la demande d'avis
+                        {% endif %}
+                    </div>
+                </div>
+                <div class="card-body">
+                    <h4 class="mt-3">Demande d'avis / conseil</h4>
+                    <hr>
+                    <div class="row mt-2">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="">{{ form_label(form.objet) }}</label>
+                                {{ form_widget(form.objet) }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="">Niveau d'exécution</label>
+                                {{ form_widget(form.niveauExecution) }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-1">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="">{{ form_label(form.rensignement) }}</label>
+                                <textarea class="form-control"
+                                          rows="10"
+                                          style="resize: none;"
+                                          disabled=""
+                                >
+                                    {{ avis.rensignement | raw }}
+                                    {{ form_widget(form.rensignement, {style: {display: 'none'}}) }}
+                                </textarea>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-2">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="">Réponse</label>
+                                {{ form_widget(form.response) }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mt-1">
+                        <div class="col">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h3 class="card-title">Fichiers joints</h3>
+                                </div>
+                                <!-- /.card-header -->
+                                <div class="card-body p-0">
+                                    <table class="table table-striped">
+                                        <thead>
+                                        <tr>
+                                            <th style="width: 10px">#</th>
+                                            <th>Nom du document</th>
+                                            <th>Ajouté le</th>
+                                            <th>Télécharger</th>
+                                        </tr>
+                                        </thead>
+                                        <tbody>
+                                        {% for doc in avis.docAvisConseils  %}
+                                            <tr>
+                                                <td>{{ loop.index }}</td>
+                                                <td>{{ doc.originalName }}</td>
+                                                <td>{{ doc.createdAt | date('d-m-Y') }}</td>
+                                                <td>
+                                                    <a href="{{ contrat_doc_directory ~ doc.path }}" target="_blank" download>
+                                                        <button type="button" class="btn btn-block btn-primary" download="{{ doc.originalName }}">Télécharger</button>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        {% endfor %}
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <!-- /.card-body -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-lg btn-info">{{ button_label|default('Enregistrer') }}</button>
+        </div>
+    </div>
+    {{ form_end(form) }}
 
-    <a href="{{ path('app_gestion_avis_conseils_avis_edit', {'id': avi.id}) }}">edit</a>
 
-    {{ include('gestion_avis_conseils/avis/_delete_form.html.twig') }}
+    <a href="{{ path('app_gestion_avis_conseils_avis_index') }}">Retour à l'accueil</a>
+
 {% endblock %}
