--- a/templates/_partials/_sidebar.html.twig
+++ b/templates/_partials/_sidebar.html.twig
@@ -111,6 +111,14 @@
                     </a>
                 </li>
                 <li class="nav-item">
+                    <a href="{{path('app_gestion_autorisation_demande_index')}}" class="nav-link" target="_top">
+                        <i class="nav-icon fas fa-th"></i>
+                        <p>
+                            Demandes d'autorisations
+                        </p>
+                    </a>
+                </li>
+                <li class="nav-item">
                     <a href="{{path('app_gestion_avis_conseils_avis_index')}}" class="nav-link" target="_top">
                         <i class="nav-icon fas fa-th"></i>
                         <p>
