Fix File uploads

--- a/templates/gestion_contentieux/litige/_form_consulter.html.twig
+++ b/templates/gestion_contentieux/litige/_form_consulter.html.twig
@@ -91,7 +91,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">Procèdure</h3>
+                        <h3 class="card-title">Procédure</h3>
                     </div>
                     <!-- /.card-header -->
                     <div class="card-body p-0">
@@ -99,7 +99,7 @@
                             <thead>
                             <tr>
                                 <th style="width: 10px">#</th>
-                                <th>Procèdure</th>
+                                <th>Procédure</th>
                                 <th>Date</th>
                             </tr>
                             </thead>
