--- a/templates/gestion_contentieux/litige/_form_editer.html.twig
+++ b/templates/gestion_contentieux/litige/_form_editer.html.twig
@@ -99,7 +99,7 @@
             <div class="col">
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">Procèdure</h3>
+                        <h3 class="card-title">Procédure</h3>
                     </div>
                     <!-- /.card-header -->
                     <div class="card-body p-0">
@@ -107,7 +107,7 @@
                             <thead>
                             <tr>
                                 <th style="width: 10px">#</th>
-                                <th>Procèdure</th>
+                                <th>Procédure</th>
                                 <th>Date</th>
                             </tr>
                             </thead>
@@ -127,5 +127,5 @@
             </div>
         </div>
 </div>
-<button class="btn">{{ button_label|default('Enregistrer') }}</button>
+<button class="btn btn-lg btn-info">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
