--- a/templates/gestion_contrat/manager/home.html.twig
+++ b/templates/gestion_contrat/manager/home.html.twig
@@ -85,16 +85,16 @@
                         <div class="card-body">
                             <div class="col-md-12">
                                 <a href="{{ path('app_gestion_contrat_manager_index') }}" target="_top">
-                                    <button type="button" class="btn btn-primary btn-block">Consulter toutes les demandes</button>
+                                    <button type="button" class="btn btn-primary btn-block">Toutes les demandes</button>
                                 </a>
                                 <a href="{{ path('app_gestion_contrat_manager_index', {etat: 'en_attente_manager'}) }}" target="_top">
-                                    <button type="button" class="btn btn-primary btn-block mt-1">Consulter les nouvelles demandes</button>
+                                    <button type="button" class="btn btn-primary btn-block mt-1">Nouvelles demandes</button>
                                 </a>
                                 <a href="{{ path('app_gestion_contrat_manager_index', {etat: 'demande_acceptee_manager'}) }}" target="_top">
-                                    <button type="button" class="btn btn-primary btn-block mt-1">Consulter les demandes validées</button>
+                                    <button type="button" class="btn btn-primary btn-block mt-1">Demandes validées</button>
                                 </a>
                                 <a href="{{ path('app_gestion_contrat_manager_index', {etat: 'demande_rejetee_manager'}) }}" target="_top">
-                                    <button type="button" class="btn btn-primary btn-block mt-1">Consulter les demandes rejetées</button>
+                                    <button type="button" class="btn btn-primary btn-block mt-1">Demandes rejetées</button>
                                 </a>
                             </div>
                         </div>
